adds css to form

--- a/forms/src/App.css
+++ b/forms/src/App.css
@@ -4,7 +4,17 @@
   padding: 2rem;
   text-align: center;
 }
-
+body{
+  background-image: url(https://images.template.net/102379/green-forest-background-idkxn.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.mainForm{
+  background-color: white;
+  border-radius: 10px;
+  width: 400px;
+  height: auto;
+}
 .logo {
   height: 6em;
   padding: 1.5em;
@@ -33,10 +43,13 @@
   }
 }
 
-.card {
+.card1 {
   padding: 2em;
+  display: flex;
+  justify-content: center;
 }
 
 .read-the-docs {
   color: #888;
 }
+
